2006-02-06 Chris Kelly <ckdake@ckdake.com> 1.5.2-pl1

  * Release: 1.5.2-pl1

2006-02-06 Jens Tkotz <jens@peino.de> 1.5.2-pl1-cvs-b6

 * SECURITY-FIX:
   If you trick an admin or a ser who has owner privs in a gallery into
   clicking on prepared link and it will cause them to insert a bad file path
   into their album data which could then cause a local file execution bug.
   
   The Team would like to thank 
   Tom Saville (seregon@bughunter.net) and his team from http://digitalarmaments.com

2006-02-02 Jens Tkotz <jens@peino.de> 1.5.2-pl1-cvs-b5

* Fix: Typo in lib/imageManipulation (netPPM instead netPBM).
       This causes watermarking to fail when watermark is a gif.

2006-02-02 Jens Tkotz <jens@peino.de> 1.5.2-pl1-cvs-b4

* Fix: adminOtherChangesEmail was not working.
  Thanks to rbeuker from forums.

2006-02-02 Jens Tkotz <jens@peino.de> 1.5.2-pl1-cvs-b3

 * Fix: setup/session_test.php didnt work correct with register globals off.

2006-02-02 Jens Tkotz <jens@peino.de> 1.5.2-pl1-cvs-b2

* Fix: "move" and "copy" an item was restricted to admins.
       Reverted to people who have permissions to edit an album.

2006-02-02 Jens Tkotz <jens@peino.de> 1.5.2-pl1-cvs-b1

 * Fix: Pierres Fix from 1.5.2-RC3-cvs-b7 was only in HEAD.

2006-01-19 Chris Kelly <ckdake@ckdake.com> 1.5.2

 * Release: 1.5.2 Final

2006-01-19 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b9

 * Change: "sanitize" fullname in new_password.php also.

 * Change: removed html/errorRow.inc, move this into lib/messages

2006-01-18 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b8

 * Security-Fix: Fullname for users was not sanitized.
                 Thus an unnince user could do a XSS injection
	         as the fullname is displayed when owner is displayed.
   Thanks to Peter Schumacher!

 * Fix: 'fitToWindow' was broken for Internet Explorer.
   Thanks to petorian from forum.

2006-01-17 Pierre-Luc Paour <paour@users.sourceforge.net>  1.5.2-RC3-cvs-b7
