@@ -1,3 +1,9 @@
+2006-02-07 Jens Tkotz <jens@peino.de> 1.5.2-pl2-cvs-b1
+
+ * FIX: If zipdownload is enabled and zipping failed,
+        gallery regardless tried to delete the parentfolder of the non existing file.
+        This deletes A LOT MORE then we want.
+
 2006-02-06 Chris Kelly <ckdake@ckdake.com> 1.5.2-pl1
 
   * Release: 1.5.2-pl1
